# KebabOS

./: CMakeLists.txt  LICENSE  README.md
include/: plasma.h  plasma_soc.h
include/dev/: counter.h  display.h  generic.h  gpio.h  irc.h  spi.h  timer.h  uart.h
include/kdev/: alt_dmac.h  counter.h  display.h  generic.h  gpio.h  irc.h  spi.h  timer.h  uart.h
include/kernel/: clock.h  device.h  interrupt.h  io.h  kernel.h  linked_list.h  memory.h
include/ksys/: memory.h  string.h  types.h  wait.h
include/platform/: plasma_soc.de1_soc.h  plasma_soc.zedboard.h
include/sys/: file.h  memory.h  string.h
src/drivers/: alt_dmac.c  counter.c  display.c  irc.c  timer.c  uart.c
src/kernel/: device.c  init.c  interrupt.c  io.c  kernel.asm  kernel.c  memory.c  vectortable.asm
src/stdlib/: file.c  memory.c  string.c  wait.c
